tests/dupe-var-fun/out.txt
error: redefined identifier: x
  ┌─ err.sml:1:11
  │
1 │ fun f (x, x) = 3
  │           ^

typechecking failed
